# ExTh-Suite

./: .gitignore  CMakeLists.txt  FileLists.cmake  LibLists.cmake  README.md
Animations/: gen_anim  gen_thefruit
Animations/The Fruit/: Composition.cmp  Composition_herbie.cmp  Paths.pth
ExAnimator/: CMakeLists.txt  ExAnimatorCharacter.cpp  ExAnimatorCharacter.h  FileLists.cmake  LibLists.cmake  main.cpp
ExAnimator/Animators/: TheFruitAnimation.cpp  TheFruitChoreographer.cpp  TheFruitChoreographer.h
ExAnimator/GUI/: ExAnimatorGui.cpp  ExAnimatorGui.h  ExAnimatorGui.ui  ExAnimatorView.cpp  ExAnimatorView.h
ExAnimator/GUI/Managers/: AnimationManager.cpp  AnimationManager.h  CameraManager.cpp  CameraManager.h  PathManager.cpp  PathManager.h  PostProdManager.cpp  PostProdManager.h  ServerManager.cpp  ServerManager.h  TimelineManager.cpp  TimelineManager.h
ExAnimator/Model/: PathModel.cpp  PathModel.h  PathReader.cpp  PathReader.h  PathWriter.h  SceneDocument.cpp  SceneDocument.h
ExAnimator/UI/: RaytracedView.cpp  RaytracedView.h  RaytracerGui.cpp  RaytracerGui.h  RaytracerGui.ui
ExAnimator/UI/Managers/: AnimationManager.cpp  AnimationManager.h  CameraManager.cpp  CameraManager.h  PathManager.cpp  PathManager.h  PostProdManager.cpp  PostProdManager.h  TimelineManager.cpp  TimelineManager.h
ExAnimator/resources/: ExAnimator.qrc
ExCompositor/: CMakeLists.txt  ExCompositorWindow.cpp  ExCompositorWindow.h  ExCompositorWindow.ui  FileLists.cmake  LibLists.cmake  Processor.cpp  Processor.h  Section.cpp  Section.h  Serializer.cpp  Serializer.h  main.cpp
ExCompositor/resources/: ExCompositor.qrc
ExCompositor/resources/shaders/: BloomBlend.frag  BloomBlur.frag  BloomBright.frag  BloomMipSum.frag  BlurX.frag  BlurY.frag  Denoise.frag  FireFlies.frag  Gammatize.frag  LumaMipSum.frag  Luminance.frag  MipmapBlur.frag  MipmapSum.frag  Preprocess.frag  Tonemapping.frag
ExRenderClient/: CMakeLists.txt  ExRenderClientCharacter.cpp  ExRenderClientCharacter.h  FileLists.cmake  LibLists.cmake  main.cpp
ExRenderClient/GUI/: ExRenderClientGui.cpp  ExRenderClientGui.h  ExRenderClientGui.ui  ExRenderClientView.cpp  ExRenderClientView.h
ExRenderClient/resources/: ExRenderClient.qrc
