CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

SET(EXTH-SUITE_PROJECT ExTh-Suite)
MESSAGE(STATUS "Building ExTh-Suite")
Project(${EXTH-SUITE_PROJECT} CXX)

SET(EXTH-SUITE_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "ExTh-Suite src dir: ${EXTH-SUITE_SRC_DIR}")
SET(EXTH-SUITE_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "ExTh-Suite bin dir: ${EXTH-SUITE_BIN_DIR}")

IF(CMAKE_COMPILER_IS_GNUCXX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
ELSEIF(MSVC)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4251") # dll interface
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4244") # int to float
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4351") # array init new behavior
ENDIF()

ADD_SUBDIRECTORY(ExAnimator)
ADD_SUBDIRECTORY(ExCompositor)
